[gd_scene load_steps=13 format=3 uid="uid://c56iigfrq84ys"]

[ext_resource type="Script" path="res://Scenes/LevelSelectionMenu/level_selection_menu.gd" id="1_3o3ol"]
[ext_resource type="Texture2D" uid="uid://dp25mba7vqxh" path="res://Ressources/Sprites/Menu/LevelSelection.png" id="1_om44h"]
[ext_resource type="AudioStream" uid="uid://nq6johk67k04" path="res://Ressources/Sounds/Detonator/reset.wav" id="2_ay3qx"]
[ext_resource type="FontFile" uid="uid://dmrpdxxwkj3cq" path="res://Ressources/Fonts/Miyoshi -Demo.ttf" id="2_mwxrw"]
[ext_resource type="PackedScene" uid="uid://fmwt8lxc4ggs" path="res://Scenes/LevelSelectionMenu/level_button.tscn" id="3_kw8ho"]
[ext_resource type="Texture2D" uid="uid://biljxpf1iaphs" path="res://Ressources/Sprites/Placeholders/back.png" id="4_fyovw"]
[ext_resource type="Texture2D" uid="uid://big3kieu5gfw1" path="res://Ressources/Sprites/Menu/transition_screen_2.png" id="4_sjiag"]
[ext_resource type="Texture2D" uid="uid://b482blg1nrf4h" path="res://Ressources/Sprites/Menu/transition_screen_triangle.png" id="5_5ltlj"]
[ext_resource type="Texture2D" uid="uid://dd3e4p7wu8qek" path="res://Ressources/Sprites/Menu/FlyingIslandDay.png" id="6_eghcy"]

[sub_resource type="Animation" id="Animation_eybl5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Animation/transi_BG1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(300, 939)]
}

[sub_resource type="Animation" id="Animation_vrnth"]
resource_name = "Transi_IN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Animation/transi_BG1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(303, 843), Vector2(300, -407)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Animation/transi_BG2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(300, 983), Vector2(300, -350)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Animation/transi_BG3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(300, 1025), Vector2(300, -325)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wd48s"]
_data = {
"RESET": SubResource("Animation_eybl5"),
"Transi_IN": SubResource("Animation_vrnth")
}

[node name="LevelSelectionMenu" type="Node"]
script = ExtResource("1_3o3ol")
select_sound = ExtResource("2_ay3qx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wd48s")
}
autoplay = "Transi_IN"

[node name="Visuals" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Sprite2D" parent="Visuals"]
z_index = -10
scale = Vector2(2.5, 2.512)
texture = ExtResource("1_om44h")
offset = Vector2(120, 216)

[node name="ColorRect" type="ColorRect" parent="Visuals/Background"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(5.992, 1.39809)
color = Color(0.243137, 0.34902, 0.6, 1)

[node name="Label" type="Label" parent="Visuals"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.31
offset_bottom = 73.31
grow_horizontal = 2
scale = Vector2(1.00146, 1)
theme_override_fonts/font = ExtResource("2_mwxrw")
theme_override_font_sizes/font_size = 86
text = "Level Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animation" type="Node2D" parent="Visuals"]
z_index = 10

[node name="transi_BG1" type="Sprite2D" parent="Visuals/Animation"]
z_index = 10
position = Vector2(300, 939)
scale = Vector2(3, 4.085)
texture = ExtResource("4_sjiag")

[node name="transi_BG2" type="Sprite2D" parent="Visuals/Animation"]
self_modulate = Color(0.152941, 0.231373, 0.419608, 1)
z_index = 9
position = Vector2(300, -350)
scale = Vector2(3, 3.55)
texture = ExtResource("5_5ltlj")

[node name="transi_BG3" type="Sprite2D" parent="Visuals/Animation"]
self_modulate = Color(0.243137, 0.34902, 0.6, 1)
z_index = 8
position = Vector2(300, -325)
scale = Vector2(3, 3.55)
texture = ExtResource("5_5ltlj")

[node name="SelectionButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="LevelButton0" parent="SelectionButton" instance=ExtResource("3_kw8ho")]
offset_left = 463.0
offset_top = 286.0
offset_right = 463.0
offset_bottom = 286.0

[node name="LevelButton1" parent="SelectionButton" instance=ExtResource("3_kw8ho")]
offset_left = 133.0
offset_top = 875.0
offset_right = 133.0
offset_bottom = 875.0
lvl_number = 1

[node name="LevelButton2" parent="SelectionButton" instance=ExtResource("3_kw8ho")]
offset_left = 254.0
offset_top = 777.0
offset_right = 254.0
offset_bottom = 777.0
lvl_number = 2

[node name="LevelButton3" parent="SelectionButton" instance=ExtResource("3_kw8ho")]
offset_left = 370.0
offset_top = 715.0
offset_right = 370.0
offset_bottom = 715.0
lvl_number = 3

[node name="LevelButton4" parent="SelectionButton" instance=ExtResource("3_kw8ho")]
offset_left = 431.0
offset_top = 567.0
offset_right = 431.0
offset_bottom = 567.0
lvl_number = 4

[node name="LevelButton5" parent="SelectionButton" instance=ExtResource("3_kw8ho")]
offset_left = 441.0
offset_top = 431.0
offset_right = 441.0
offset_bottom = 431.0
lvl_number = 5

[node name="OtherUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackMenuButton" type="TextureButton" parent="OtherUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("4_fyovw")
flip_h = true
flip_v = true

[node name="Lvl_info_display" type="Control" parent="OtherUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Lvl_info_text" type="Label" parent="OtherUI/Lvl_info_display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -11.5
offset_right = 106.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Level XX Best Score : XXXXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Not_a_floating_Island" type="Sprite2D" parent="OtherUI"]
position = Vector2(-61, 318)
scale = Vector2(3, 3)
texture = ExtResource("6_eghcy")

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Sounds"

[connection signal="on_mouse_hover_lvl" from="SelectionButton/LevelButton1" to="." method="_on_level_button_on_mouse_hover_lvl"]
[connection signal="on_mouse_hover_lvl" from="SelectionButton/LevelButton2" to="." method="_on_level_button_2_on_mouse_hover_lvl"]
[connection signal="button_down" from="OtherUI/BackMenuButton" to="." method="_on_back_menu_button_button_down"]
